# nonebot-plugin-duolingo

./: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: index.md  modules.md
